Front de entregas y mensajes

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
         </div>
         <div class="mensaje2">
             <h2>MENSAJE</h2>
-
+            <div class="mensaje"></div>
         </div>
 
 
