edicion de los botones oploadFile y enviar

--- a/index.html
+++ b/index.html
@@ -78,14 +78,16 @@
             <p>I: Giro a la Izquierda</p>
 
         </div>
-        <form name="uploadForm" id ="uploadFile">
-            <div>
-              <input id="uploadInput" type="file" name="myFiles" multiple>
-              selected files: <span id="fileNum">0</span>;
-              total size: <span id="fileSize">0</span>
-            </div>
-            <button type="submit" id="enviarInput">Enviar input</button>
-          </form>
+        <div class="upload2">
+            <form name="uploadForm" id="uploadFile">
+                <div>
+                    <input id="uploadInput" type="file" name="myFiles" multiple> selected files: <span id="fileNum">0</span>; total size: <span id="fileSize">0</span>
+                </div>
+                <button type="submit" id="enviarInput">Enviar input</button><br>
+                <button type="submit" id="download">Descargar Files</button>
+            </form>
+        </div>
+
         <div class="direccion2">
             <center>
                 <h2>DIRECCIÓN DRONES</h2>
