pruebas para decargar zip

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                     <input id="uploadInput" type="file" name="myFiles" multiple> selected files: <span id="fileNum">0</span>; total size: <span id="fileSize">0</span>
                 </div>
                 <button type="submit" id="enviarInput">Enviar input</button><br>
-                <button type="submit" id="download">Descargar Files</button>
+                <button type="button" id="download">Descargar Files</button>
             </form>
         </div>
 
@@ -120,6 +120,7 @@
     <script src="./js/direccion.js"></script>
 
     <script src="./js/enviar-input.js"></script>
+    <script src="./js/test.js"></script>
 </body>
 
 </html>
