--- a/my-app/public/index.html
+++ b/my-app/public/index.html
@@ -33,7 +33,7 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div class="container1">
+    <!-- <div class="container1">
       <div class="formulario1">
           <h2>CONFIGURACIÓN</h2>
           <table>
@@ -130,7 +130,7 @@
     </div>
 
 
-  </div>
+  </div> -->
     <div id="root"></div>
     <!--
       This HTML file is a template.
@@ -142,13 +142,13 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
-    <script src="./js/app.js"></script>
+    <!-- <script src="./js/app.js"></script>
     <script src="./js/configAPI.js"></script>
     <script src="./js/grilla.js"></script>
     <script src="./js/entregasRealizadas.js"></script>
     <script src="./js/direccion.js"></script>
 
     <script src="./js/enviar-input.js"></script>
-    <script src="./js/test.js"></script>
+    <script src="./js/test.js"></script> -->
   </body>
 </html>
